--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -21,9 +21,9 @@
     <property name="geometry">
      <rect>
       <x>1240</x>
-      <y>503</y>
+      <y>483</y>
       <width>261</width>
-      <height>181</height>
+      <height>201</height>
      </rect>
     </property>
     <property name="layoutDirection">
@@ -172,7 +172,7 @@ font: 15pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>1240</x>
-      <y>473</y>
+      <y>450</y>
       <width>231</width>
       <height>31</height>
      </rect>
@@ -378,7 +378,7 @@ QPushButton:pressed {
       <x>20</x>
       <y>230</y>
       <width>171</width>
-      <height>20</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -388,6 +388,49 @@ QPushButton:pressed {
     </property>
     <property name="text">
      <string>Выбрать скорость:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_time">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>300</y>
+      <width>48</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="minimum">
+     <number>10</number>
+    </property>
+    <property name="maximum">
+     <number>60</number>
+    </property>
+    <property name="value">
+     <number>20</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>280</y>
+      <width>151</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Выбрать время
+стрельбы(сек):</string>
     </property>
    </widget>
    <zorder>listWidget_Info</zorder>
@@ -404,6 +447,8 @@ QPushButton:pressed {
    <zorder>pushButton_Buy</zorder>
    <zorder>spinBox_speed</zorder>
    <zorder>label_3</zorder>
+   <zorder>spinBox_time</zorder>
+   <zorder>label_4</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
